--- a/index.html
+++ b/index.html
@@ -665,14 +665,14 @@
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="ASUNTO" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="DESRIPCION" required></textarea>
+                <textarea class="form-control" name="message" rows="5" placeholder="DESCRIPCION" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit">ENVIAR MENSAJE</button></div>
             </form>
 
           </div>
